crates/flowscope-core/tests/snapshots/golden__imported_schema_resolves_via_default_schema.snap
---
source: crates/flowscope-core/tests/golden.rs
expression: cleaned
---
{
  "statements": [
    {
      "statementIndex": 0,
      "statementType": "SELECT",
      "nodes": [
        {
          "id": "column_146291330e487758",
          "type": "column",
          "label": "id",
          "qualifiedName": "public.users.id"
        },
        {
          "id": "column_dacc241e355a2303",
          "type": "column",
          "label": "email"
        },
        {
          "id": "column_e38d78c338bac387",
          "type": "column",
          "label": "id"
        },
        {
          "id": "column_e40458cf3907cc5e",
          "type": "column",
          "label": "email",
          "qualifiedName": "public.users.email"
        },
        {
          "id": "output_74d22f755ec62dbc",
          "type": "output",
          "label": "Output"
        },
        {
          "id": "table_61860e36618f6e44",
          "type": "table",
          "label": "users",
          "qualifiedName": "public.users",
          "resolutionSource": "imported"
        }
      ],
      "edges": [
        {
          "id": "edge_0fd7c9d999a9289c",
          "from": "table_61860e36618f6e44",
          "to": "column_e40458cf3907cc5e",
          "type": "ownership"
        },
        {
          "id": "edge_672b1257db7bb55c",
          "from": "output_74d22f755ec62dbc",
          "to": "column_dacc241e355a2303",
          "type": "ownership"
        },
        {
          "id": "edge_686fd17f81858f87",
          "from": "table_61860e36618f6e44",
          "to": "column_146291330e487758",
          "type": "ownership"
        },
        {
          "id": "edge_90404cb72e70cc3e",
          "from": "column_e40458cf3907cc5e",
          "to": "column_dacc241e355a2303",
          "type": "data_flow"
        },
        {
          "id": "edge_9b5441461589fa16",
          "from": "output_74d22f755ec62dbc",
          "to": "column_e38d78c338bac387",
          "type": "ownership"
        },
        {
          "id": "edge_abf4e6de48add9f9",
          "from": "column_146291330e487758",
          "to": "column_e38d78c338bac387",
          "type": "data_flow"
        }
      ],
      "joinCount": 0,
      "complexityScore": 5
    }
  ],
  "globalLineage": {
    "nodes": [
      {
        "id": "column_422dbff9bab1c4b2",
        "type": "column",
        "label": "id",
        "canonicalName": {
          "catalog": "public",
          "schema": "users",
          "name": "id"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "column_146291330e487758"
          }
        ]
      },
      {
        "id": "column_9cf31ab8333dc87c",
        "type": "column",
        "label": "email",
        "canonicalName": {
          "catalog": "public",
          "schema": "users",
          "name": "email"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "column_e40458cf3907cc5e"
          }
        ]
      },
      {
        "id": "column_dacc241e355a2303",
        "type": "column",
        "label": "email",
        "canonicalName": {
          "name": "email"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "column_dacc241e355a2303"
          }
        ]
      },
      {
        "id": "column_e38d78c338bac387",
        "type": "column",
        "label": "id",
        "canonicalName": {
          "name": "id"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "column_e38d78c338bac387"
          }
        ]
      },
      {
        "id": "output_74d22f755ec62dbc",
        "type": "output",
        "label": "Output",
        "canonicalName": {
          "name": "Output"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "output_74d22f755ec62dbc"
          }
        ]
      },
      {
        "id": "table_61860e36618f6e44",
        "type": "table",
        "label": "users",
        "canonicalName": {
          "schema": "public",
          "name": "users"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "table_61860e36618f6e44"
          }
        ],
        "resolutionSource": "imported"
      }
    ],
    "edges": [
      {
        "id": "edge_0fd7c9d999a9289c",
        "from": "table_61860e36618f6e44",
        "to": "column_9cf31ab8333dc87c",
        "type": "ownership",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_672b1257db7bb55c",
        "from": "output_74d22f755ec62dbc",
        "to": "column_dacc241e355a2303",
        "type": "ownership",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_686fd17f81858f87",
        "from": "table_61860e36618f6e44",
        "to": "column_422dbff9bab1c4b2",
        "type": "ownership",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_90404cb72e70cc3e",
        "from": "column_9cf31ab8333dc87c",
        "to": "column_dacc241e355a2303",
        "type": "data_flow",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_9b5441461589fa16",
        "from": "output_74d22f755ec62dbc",
        "to": "column_e38d78c338bac387",
        "type": "ownership",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_abf4e6de48add9f9",
        "from": "column_422dbff9bab1c4b2",
        "to": "column_e38d78c338bac387",
        "type": "data_flow",
        "producerStatement": {
          "statementIndex": 0
        }
      }
    ]
  },
  "issues": [],
  "summary": {
    "statementCount": 1,
    "tableCount": 1,
    "columnCount": 4,
    "joinCount": 0,
    "complexityScore": 5,
    "issueCount": {
      "errors": 0,
      "warnings": 0,
      "infos": 0
    },
    "hasErrors": false
  },
  "resolvedSchema": {
    "tables": [
      {
        "schema": "public",
        "name": "users",
        "columns": [
          {
            "name": "id",
            "origin": "imported"
          },
          {
            "name": "email",
            "origin": "imported"
          }
        ],
        "origin": "imported",
        "updatedAt": "2024-01-01T00:00:00Z"
      }
    ]
  }
}
